<resources>
    <string name="app_name">TU Care Giver</string>
    <string name="title_activity_map">Map</string>
    <string name="drawer_open">Open Navigation drawer</string>
    <string name="drawer_close">Close Navigation drawer</string>
    <string name="be_an_elder">สมัครสมาชิกเป็นผู้ป่วย</string>
    <string name="be_a_care_giver">สมัครสมาชิกเป็นผู้ดูแล</string>
    <string name="sign_in">เข้าสู่ระบบ</string>
    <string name="sign_up">สมัครสมาชิก</string>
    <string name="mode_care_giver">โหมดผู้ดูแล</string>
    <string name="temp">เทมป์</string>
    <string name="name">ชื่อ</string>
    <string name="last_name">นามสกุล</string>
    <string name="citizen_id">เลขบัตรประจำตัวประชาชน</string>
    <string name="date_of_birth">วันเดือนปีเกิด</string>
    <string name="job">อาชีพ</string>
    <string name="address">ที่อยู่</string>
    <string name="telephone">เบอร์โทรศัพท์</string>
    <string name="drug_allergy">ยาที่แพ้</string>
    <string name="blood_group">หมู่โลหิต</string>
    <string name="relative_name">ชื่อของบุคคคลใกล้ชิด</string>
    <string name="relative_last_name">นามสกุลของบุคคคลใกล้ชิด</string>
    <string name="relative_telephone">เบอร์โทรศัพท์ของบุคคคลใกล้ชิด</string>
    <string name="insert_phone_number">กรอกเบอร์โทรศัพทร์มือถือ</string>
    <string name="get_otp">รับรหัสผ่าน OTP</string>
    <string name="confirm_otp">รับรหัสผ่าน OTP</string>
    <string name="take_photo_by_camera">ถ่ายรูปเพื่อเลือกเป็นรูปประจำตัว</string>
    <string name="choose_photo_from_gallery">เลือกรูปประจำตัวจากคลังภาพ</string>
    <string name="next">ต่อไป</string>
    <string name="inbox">กล่องขาเข้า</string>
    <string name="under">ผู้สูงอายุที่อยู่ในการดูแล</string>
    <string name="more">เพิ่มเติม</string>

    <string-array name="sex">
        <item>เพศ</item>
        <item>ชาย</item>
        <item>หญิง</item>
    </string-array>

    <string-array name="blood_group">
        <item>หมู่เลือด</item>
        <item>เอ</item>
        <item>บี</item>
        <item>เอบี</item>
        <item>โอ</item>
    </string-array>

    <string-array name="caregiver_type">
        <item>อาชีพ</item>
        <item>พยาบาลวิชาชีพ</item>
        <item>ผู้ช่วยพยาบาล</item>
    </string-array>

</resources>
