<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.caregiver.Booking_List_Elderly"
    android:orientation="vertical">

    <ListView
        android:id="@+id/booking_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">


        <Button
            android:id="@+id/caregiver_inbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inbox"
            android:onClick="onCickInBoxIntent"
            android:background="@color/colorMain"
            android:textColor="@color/White"
            android:textSize="@dimen/font_medium"/>

        <Button
            android:id="@+id/caregiver_under"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:elevation="0dp"
            android:text="@string/under"
            android:textColor="@color/White"
            android:textSize="@dimen/font_medium" />

        <Button
            android:id="@+id/caregiver_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/more"
            android:background="@color/colorMain"
            android:textColor="@color/White"
            android:textSize="@dimen/font_medium"/>

    </LinearLayout>
</LinearLayout>
